Wokring on portfolio sections

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -41,6 +41,8 @@ textarea {
   line-height: 1.2em;
   border: 1px solid #F2F2F2;
   overflow-y: auto;
+  font-size: 0.9em;
+  font-weight: 300;
 }
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
