--- a/static/css/style.css
+++ b/static/css/style.css
@@ -182,7 +182,9 @@ textarea {
   -webkit-appearance: none;
   line-height: 1.2em;
   border: 1px solid #F2F2F2;
-  overflow-y: auto; }
+  overflow-y: auto;
+  font-size: 0.9em;
+  font-weight: 300; }
 
 ::-webkit-input-placeholder {
   /* WebKit, Blink, Edge */
