--- a/templates/_new_portfolio_category.html.j2
+++ b/templates/_new_portfolio_category.html.j2
@@ -2,7 +2,7 @@
 	<form class="category-section-add-form">
 		<div class="db-quick-row">
 			<div class="form-group">
-				<p class="db-quick-inner-text">Category Name:</p>
+				<p class="db-quick-inner-text">Category Name</p>
 				<input type="text" name="section-add-title" value="" class="section-add-input">
 			</div>
 			<div class="align-right">
