--- a/static/css/style.css
+++ b/static/css/style.css
@@ -184,7 +184,8 @@ textarea {
   border: 1px solid #F2F2F2;
   overflow-y: auto;
   font-size: 0.9em;
-  font-weight: 300; }
+  font-weight: 300;
+  padding: 5px; }
 
 ::-webkit-input-placeholder {
   /* WebKit, Blink, Edge */
@@ -250,7 +251,7 @@ a:link, a:visited {
   .form-group input:focus {
     border-color: #3a85c2; }
 
-.login-btn, .save-btn {
+.login-btn, .save-btn, .delete-btn {
   border: 1px solid #F4F4F4;
   font-size: 0.8em;
   line-height: 1.5em;
@@ -265,8 +266,11 @@ a:link, a:visited {
   -ms-transition: border-color 750ms ease;
   -o-transition: border-color 750ms ease;
   transition: border-color 750ms ease; }
-  .login-btn:hover, .save-btn:hover {
+  .login-btn:hover, .save-btn:hover, .delete-btn:hover {
     border-color: #3a85c2; }
+
+.delete-btn:hover {
+  border-color: #dd2020; }
 
 .item-toggle-modal {
   float: right;
@@ -550,19 +554,19 @@ a:link, a:visited {
       list-style-type: none;
       display: inline-block;
       border: 1px solid #404040;
-      margin-right: 5px;
+      margin-right: 10px;
       padding: 5px 10px;
-      font-size: 0.8em; }
-      .dashboard-header .dashboard-nav-wrapper .dashboard-nav ul .dashboard-nav-item.current-nav-item::after, .dashboard-header .dashboard-nav-wrapper .dashboard-nav ul .dashboard-nav-item:hover::after {
-        content: "";
-        position: relative;
-        top: 5px;
-        left: 0;
-        display: block;
-        height: 1px;
-        width: 70%;
-        margin-left: 15%;
-        background-color: #CCCCCC; }
+      font-size: 0.8em;
+      font-weight: 400;
+      letter-spacing: 0.03em;
+      color: rgba(255, 255, 255, 0.7);
+      -webkit-transition: color 450ms ease;
+      -moz-transition: color 450ms ease;
+      -ms-transition: color 450ms ease;
+      -o-transition: color 450ms ease;
+      transition: color 450ms ease; }
+      .dashboard-header .dashboard-nav-wrapper .dashboard-nav ul .dashboard-nav-item.current-nav-item, .dashboard-header .dashboard-nav-wrapper .dashboard-nav ul .dashboard-nav-item:hover {
+        color: white; }
   .dashboard-header .user-meta {
     text-align: right;
     position: relative; }
@@ -637,7 +641,7 @@ a:link, a:visited {
   .dashboard-content .db-quick-title {
     font-size: 1.2em;
     font-weight: 400;
-    margin-bottom: 30px; }
+    margin: 30px 0; }
   .dashboard-content .db-quick-subtitle {
     font-size: 1.1em;
     margin: 20px 0; }
@@ -671,15 +675,16 @@ a:link, a:visited {
   .dashboard-content .db-section-content-expand, .dashboard-content .db-section-content-hide {
     padding: 10px;
     cursor: pointer;
+    width: 100%;
     font-size: 0.9em; }
   .dashboard-content .db-section-content-hide {
     display: none;
-    width: 48%;
-    text-align: right;
-    font-size: 0.8em; }
-  .dashboard-content .db-section-content-expand {
-    display: inline-block;
-    width: 50%; }
+    text-align: center;
+    padding: 15px; }
+  .dashboard-content .db-section-item-description {
+    font-size: 0.8em;
+    letter-spacing: 0.04em;
+    line-height: 1.5em; }
   .dashboard-content .db-section-item-content {
     padding: 10px;
     background-color: #FFF;
@@ -759,19 +764,26 @@ a:link, a:visited {
     .dashboard-content .db-portfolio-item-delete:hover {
       background-color: #dd2020;
       color: #FFF; }
-  .dashboard-content .add-portfolio-item {
-    padding: 2px 5px;
-    border: 1px solid #2cc436;
+  .dashboard-content .db-add-portfolio-item {
+    padding: 8px 5px;
+    border: 1px solid #3a85c2;
     font-size: 0.8em;
     -webkit-transition: all 450ms ease;
     -moz-transition: all 450ms ease;
     -ms-transition: all 450ms ease;
     -o-transition: all 450ms ease;
     transition: all 450ms ease;
-    cursor: pointer; }
-    .dashboard-content .add-portfolio-item:hover {
-      background-color: #2cc436;
+    cursor: pointer;
+    max-width: 80px;
+    margin: 0 auto;
+    text-align: center; }
+    .dashboard-content .db-add-portfolio-item:hover {
+      background-color: #3a85c2;
       color: #FFF; }
+  .dashboard-content .db-empty-section {
+    font-size: 0.8em;
+    color: #808080;
+    text-align: center; }
   .dashboard-content input {
     font-size: 0.9em; }
   .dashboard-content textarea {
