--- a/templates/_portfolio_form.html.j2
+++ b/templates/_portfolio_form.html.j2
@@ -24,7 +24,7 @@
 			</div>
 			<div class="align-right">
 				<button type="submit" class="save-btn" id="section-portfolio-{{ class_id }}-submit">Save</button>
-				<button type="submit" class="save-btn delete-btn" id="section-portfolio-{{ class_id }}-submit">Delete</button>
+				<button type="submit" class="save-btn delete-btn" id="section-delete-{{ class_id }}-submit">Delete</button>
 			</div>
 		</div>
 	</form>
