--- a/templates/_dashboard_sections.html.j2
+++ b/templates/_dashboard_sections.html.j2
@@ -17,6 +17,7 @@
 										</div>
 										<div class="db-section-content-hide">
 											<p class="db-section-item-title">Section {{ sections[i]["title"] }}</p>
+											<p class="db-section-item-description">{{ sections[i]["description"] }}</p>
 										</div>
 										<div class="db-section-item-content">
 											{% if sections[i]["type"] == 'portfolio' %}
