--- a/templates/login.html.j2
+++ b/templates/login.html.j2
@@ -1,5 +1,6 @@
-{% set active_webpage = "Login" %}
-{% extends "header.html.j2" %}
+{% set active_webpage = "login" %}
+{% set active_theme = "point-theme" %}
+{% extends "template-parts/master-header.html.j2" %}
 
 {% block body %}
 	
@@ -8,7 +9,7 @@
 			<div class="login-wrapper display-table">
 				<div class="login-form display-table-cell">
 					<div class="back-home">Back to <a href="http://localhost:5000">homepage</a>.</div>
-					<h1 class="login-text">Moonbow CMS</h1>
+					<h1 class="login-text"><img src="/static/uploads/logos/point-cms-logo.svg" alt=""></h1>
 					<h4 class="login-description">Welcome to the login page</h4>
 
 					{% include "_messages.html.j2" %}
