Working on folder structure

--- a/templates/admin/dashboard-pages/_dashboard_overview.html.j2
+++ b/templates/admin/dashboard-pages/_dashboard_overview.html.j2
@@ -8,7 +8,7 @@
 				<form class="general-form">
 					<div class="db-quick-row">
 						<div class="form-group">
-							<p class="db-quick-inner-text">Active Name:</p>
+							<p class="db-quick-inner-text">Theme Name:</p>
 							<input type="text" name="website_name" value="{{ active_theme }}" class="general-input">
 						</div>
 						<div class="align-right">
