--- a/static/themes/point-theme/scss/style.scss
+++ b/static/themes/point-theme/scss/style.scss
@@ -316,7 +316,7 @@ a:link, a:visited { text-decoration: none; }
   .db-portfolio-item-meta-columns { font-size: 0.8em; border: 1px solid #F2F2F2; background-color: #F2F2F2; padding: 12px 5px 10px 5px;  border-top-left-radius: 5px; border-top-right-radius: 5px; }
   .db-portfolio-item-meta { padding: 12px 5px 10px 5px; border: 1px solid #F2F2F2; border-top: 0; }
   .db-portfolio-item-text { font-size: 0.9em; padding-top: 2px; }
-  .db-portfolio-item-edit, .db-portfolio-item-delete, .db-add-portfolio-item { font-size: 0.8em; line-height: 1.5em; letter-spacing: 0.02em; font-weight: 300; padding: 2px 5px; color: $primary_color; border: 1px solid $border_color; margin-right: 5px; cursor: pointer; @include transition(border-color, 450ms); }
+  .db-portfolio-item-edit, .db-portfolio-item-delete, .db-add-portfolio-item { font-size: 0.8em; margin: 0; line-height: 1.5em; letter-spacing: 0.02em; font-weight: 300; padding: 2px 5px; color: $primary_color; border: 1px solid $border_color; margin-right: 5px; cursor: pointer; @include transition(border-color, 450ms); }
   .db-portfolio-item-edit { &:hover { border-color: #3a85c2; } }
   .db-portfolio-item-delete { margin: 0; &:hover { border-color: #dd2020; } }
   .db-add-portfolio-item { max-width: 70px; margin: 0 auto; text-align: center; &:hover { border-color: #3a85c2; } }
