--- a/templates/admin/dashboard-pages/_dashboard_sections.html.j2
+++ b/templates/admin/dashboard-pages/_dashboard_sections.html.j2
@@ -7,71 +7,30 @@
 				{% set sections = execute_query("SELECT title, description, position, type, class_id FROM section_list JOIN section_type USING (tid) ORDER BY position") %}
 				{% set numb_of_sections = sections | length %}
 				<p class="db-quick-subtitle">Your sections</p>
-					{% for i in range(0, numb_of_sections) %}
-							<div class="db-quick-row">
-								<div class="db-section-item">
-									<div class="db-section-item-wrapper">
-										<div class="db-section-content-expand">
-											<p class="db-section-item-title">Section {{ sections[i]["title"] }}</p>
-											<p class="db-section-item-description">{{ sections[i]["description"] }}</p>
-										</div>
-										<div class="db-section-content-hide">
-											<p class="db-section-item-title">Section {{ sections[i]["title"] }}</p>
-											<p class="db-section-item-description">{{ sections[i]["description"] }}</p>
-										</div>
-										<div class="db-section-item-content">
+					{% if numb_of_sections != 0 %}
+						{% for i in range(0, numb_of_sections) %}
+								<div class="db-quick-row">
+									<div class="db-section-item">
+										<div class="db-section-item-wrapper">
+											<div class="db-section-content-expand">
+												<p class="db-section-item-title">Section {{ sections[i]["title"] }}</p>
+												<p class="db-section-item-description">{{ sections[i]["description"] }}</p>
+											</div>
+											<div class="db-section-content-hide">
+												<p class="db-section-item-title">Section {{ sections[i]["title"] }}</p>
+												<p class="db-section-item-description">{{ sections[i]["description"] }}</p>
+											</div>
+											<div class="db-section-item-content">
 
-											{% if sections[i]["type"] == 'portfolio' %}
+												{% if sections[i]["type"] == 'portfolio' %}
 
-												{% set class_id = sections[i]["class_id"] %}
+													{% set class_id = sections[i]["class_id"] %}
 
-												<form class="section-portfolio-{{ class_id }}-form">
-													<div class="db-quick-row">
-														<div class="form-group align-right">
-															<span class="db-quick-inner-text">Position</span>
-															<select class="db-quick-select section-portfolio-{{ class_id }}-input">
-																{% for position in range (1, numb_of_sections + 1) %}
-																	{% if position == (sections[i]["position"] | int) %}
-																		<option value="{{ position }}"selected>{{ position }}</option>
-																	{% else %}
-																		<option value="{{ position }}">{{ position }}</option>
-																	{% endif %}
-																{% endfor %}
-															</select>
-														</div>
-														<div class="form-group">
-															<p class="db-quick-inner-text">Section Title</p>
-															<input type="text" name="section-portfolio-{{ class_id }}_title" value="{{ sections[i]['title'] }}" class="section-portfolio-{{ class_id }}-input">
-														</div>
-														<div class="form-group">
-															<p class="db-quick-inner-text">Section Description</p>
-															<input type="text" name="section-portfolio-{{ class_id }}_description" value="{{ sections[i]['description'] }}" class="section-portfolio-{{ class_id }}-input">
-														</div>
-														<div class="align-right">
-															<button type="submit" class="save-btn" id="section-portfolio-{{ class_id }}-submit">Save</button>
-															<button type="submit" class="save-btn delete-btn" id="section-delete-{{ class_id }}-submit">Delete</button>
-														</div>
-													</div>
-												</form>
-												<div class="form-group">
-													<p class="db-quick-inner-text">Portfolio Items</p>
-													<div class="db-new-portfolio-item-wrapper">
-														{% include 'admin/dashboard-pages/includes/_portfolio_item_table_view.html.j2' %}
-														{% include 'admin/dashboard-pages/includes/_portfolio_item_modal.html.j2' %}
-													</div>
-													<p class="db-add-portfolio-item">Add New</p>
-												</div>
-
-											{% else %}
-
-													{% set class_id = sections[i]["class_id"] %} {% set query = "SELECT content FROM template_blank JOIN section_list USING(sid)
-													WHERE class_id = '%s'" | format(class_id) %} {% set content = execute_query(query)[0]["content"] %}
-
-													<form class="section-blank-{{ class_id }}-form">
+													<form class="section-portfolio-{{ class_id }}-form">
 														<div class="db-quick-row">
 															<div class="form-group align-right">
 																<span class="db-quick-inner-text">Position</span>
-																<select class="db-quick-select section-blank-{{ class_id }}-input">
+																<select class="db-quick-select section-portfolio-{{ class_id }}-input">
 																	{% for position in range (1, numb_of_sections + 1) %}
 																		{% if position == (sections[i]["position"] | int) %}
 																			<option value="{{ position }}"selected>{{ position }}</option>
@@ -83,30 +42,75 @@
 															</div>
 															<div class="form-group">
 																<p class="db-quick-inner-text">Section Title</p>
-																<input type="text" name="section-blank-{{ class_id }}_title" value="{{ sections[i]['title'] }}" class="section-blank-{{ class_id }}-input">
+																<input type="text" name="section-portfolio-{{ class_id }}_title" value="{{ sections[i]['title'] }}" class="section-portfolio-{{ class_id }}-input">
 															</div>
 															<div class="form-group">
 																<p class="db-quick-inner-text">Section Description</p>
-																<input type="text" name="section-blank-{ class_id }}_description" value="{{ sections[i]['description'] }}" class="section-blank-{{ class_id }}-input">
-															</div>
-															<div class="form-group">
-																<p class="db-quick-inner-text">Section Content</p>
-																<textarea type="text" name="section-blank-{{ class_id }}_content" class="section-blank-{{ class_id }}-input">{{ content }}</textarea>
+																<input type="text" name="section-portfolio-{{ class_id }}_description" value="{{ sections[i]['description'] }}" class="section-portfolio-{{ class_id }}-input">
 															</div>
 															<div class="align-right">
-																<button type="submit" class="save-btn" id="section-blank-{{ class_id }}-submit">Save</button>
+																<button type="submit" class="save-btn" id="section-portfolio-{{ class_id }}-submit">Save</button>
 																<button type="submit" class="save-btn delete-btn" id="section-delete-{{ class_id }}-submit">Delete</button>
 															</div>
 														</div>
 													</form>
+													<div class="form-group">
+														<p class="db-quick-inner-text">Portfolio Items</p>
+														<div class="db-new-portfolio-item-wrapper">
+															{% include 'admin/dashboard-pages/includes/_portfolio_item_table_view.html.j2' %}
+															{% include 'admin/dashboard-pages/includes/_portfolio_item_modal.html.j2' %}
+														</div>
+														<p class="db-add-portfolio-item">Add New</p>
+													</div>
 
-											{% endif %}
+												{% else %}
 
+														{% set class_id = sections[i]["class_id"] %} {% set query = "SELECT content FROM template_blank JOIN section_list USING(sid)
+														WHERE class_id = '%s'" | format(class_id) %} {% set content = execute_query(query)[0]["content"] %}
+
+														<form class="section-blank-{{ class_id }}-form">
+															<div class="db-quick-row">
+																<div class="form-group align-right">
+																	<span class="db-quick-inner-text">Position</span>
+																	<select class="db-quick-select section-blank-{{ class_id }}-input">
+																		{% for position in range (1, numb_of_sections + 1) %}
+																			{% if position == (sections[i]["position"] | int) %}
+																				<option value="{{ position }}"selected>{{ position }}</option>
+																			{% else %}
+																				<option value="{{ position }}">{{ position }}</option>
+																			{% endif %}
+																		{% endfor %}
+																	</select>
+																</div>
+																<div class="form-group">
+																	<p class="db-quick-inner-text">Section Title</p>
+																	<input type="text" name="section-blank-{{ class_id }}_title" value="{{ sections[i]['title'] }}" class="section-blank-{{ class_id }}-input">
+																</div>
+																<div class="form-group">
+																	<p class="db-quick-inner-text">Section Description</p>
+																	<input type="text" name="section-blank-{ class_id }}_description" value="{{ sections[i]['description'] }}" class="section-blank-{{ class_id }}-input">
+																</div>
+																<div class="form-group">
+																	<p class="db-quick-inner-text">Section Content</p>
+																	<textarea type="text" name="section-blank-{{ class_id }}_content" class="section-blank-{{ class_id }}-input">{{ content }}</textarea>
+																</div>
+																<div class="align-right">
+																	<button type="submit" class="save-btn" id="section-blank-{{ class_id }}-submit">Save</button>
+																	<button type="submit" class="save-btn delete-btn" id="section-delete-{{ class_id }}-submit">Delete</button>
+																</div>
+															</div>
+														</form>
+
+												{% endif %}
+
+											</div>
 										</div>
 									</div>
 								</div>
-							</div>
-					{% endfor %}
+						{% endfor %}
+						{% else %}
+							<p class="db-empty-section">No sections. Click on the <strong>+Section</strong> field to create your first section.</p>
+					{% endif %}
 			</div>
 			<div class="column-3">
 				<p class="db-quick-title">User Actions</p>
