--- a/templates/template-loaders/master-header.html.j2
+++ b/templates/template-loaders/master-header.html.j2
@@ -9,7 +9,7 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <!-- CSS, Fonts, Links -->
 	    <link rel="profile" href="https://gmpg.org/xfn/11">
-		<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400"> -->
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
 		{% if active_webpage == "dashboard": %}
 			<link rel="stylesheet" href="{{ url_for('static', filename='themes/point-theme/css/style.css') }}">
 		{% else: %}
