--- a/templates/admin/_dashboard_overview.html.j2
+++ b/templates/admin/_dashboard_overview.html.j2
@@ -1,3 +1,9 @@
+
+{% set data = execute_query("SELECT theme, homepage_color, dashboard_color FROM settings")[0] %}
+{% set active_theme = data["theme"] %}
+{% set dashboard_color = data["dashboard_color"] %}
+{% set homepage_color = data["homepage_color"] %}
+
 <p class="db-quick-text">Hi there! Here are some quick links.</p>
 <div class="row">
 	<div class="column-12">
@@ -5,30 +11,38 @@
 			<div class="db-quick-item db-quick-settings">
 				<p class="db-quick-title">General</p>
 				<p class="db-quick-subtitle">Theme Settings</p>
-				<form class="general-form">
+
+				<form class="theme-settings-form">
 					<div class="db-quick-row">
 						<div class="form-group">
 							<p class="db-quick-inner-text">Theme Name:</p>
-							<input type="text" name="website_name" value="{{ active_theme }}" class="general-input">
+							<input type="text" name="theme-settings-name" value="{{ active_theme }}" class="theme-settings-input">
 						</div>
-						<div class="align-right">
-							<button type="submit" class="save-btn" id="general-submit">Save</button>
+					</div>
+				
+					<p class="db-quick-subtitle">Accent Colors</p>
+					{% set theme_accent = ['Dashboard', 'Website'] %}
+					{% set colors = ["white", "black", "red"] %}
+					{% for i in range(2) %}
+						<div class="db-quick-row">
+							<span class="db-quick-inner-text">{{ theme_accent[i] }}:</span>
+							<select class="db-quick-select theme-settings-input">
+								{% for j in range (colors | length) %}
+									{% if i == 0 and colors[j] == dashboard_color or i == 1 and colors[j] == homepage_color %}
+										<option value="{{ colors[j] }}" selected> {{ colors[j] | title }} </option>
+									{% else %}
+										<option value="{{ colors[j] }}"> {{ colors[j] | title }} </option>
+									{% endif %}
+								{% endfor %}
+							</select>
 						</div>
+					{% endfor %}
+
+					<div class="align-right">
+						<button type="submit" class="save-btn" id="theme-settings-submit">Save</button>
 					</div>
 				</form>
-				<p class="db-quick-subtitle">Accent Colors</p>
-				{% set theme_accent = ['Dashboard', 'Website'] %}
-				{% for i in range(2) %}
-					<div class="db-quick-row">
-						<span class="db-quick-inner-text">{{ theme_accent[i] }}:</span>
-						<select class="db-quick-select">
-							<option value="">-</option>
-							<option value="white">White</option>
-							<option value="black">Black</option>
-							<option value="red">Red</option>
-						</select>
-					</div>
-				{% endfor %}
+
 			</div>
 		</div>
 		<div class="column-4">
