--- a/templates/template-loaders/master-header.html.j2
+++ b/templates/template-loaders/master-header.html.j2
@@ -32,8 +32,8 @@
 		{% elif active_webpage == "login" %}
 			<script type="text/javascript" src=" {{ url_for('static', filename='admin/js/min/login.min.js') }} "></script>
 		{% elif active_webpage == "home" %}
-			{% set file_url = "static/themes/" + active_theme + "/js/theme.min.js" %}
-			<script type="text/javascript" src=" {{ file_url }} "></script>
+			{% set file_url = "themes/" + active_theme + "/js/theme.min.js" %}
+			<script type="text/javascript" src=" {{ url_for('static', filename=file_url) }} "></script>
 		{% endif %}
 	</body>
 </html>
